Ricty Discord & large font

--- a/Solarized Dark.yaml
+++ b/Solarized Dark.yaml
@@ -21,12 +21,12 @@ log-view:
   nickname-format: '%n: '
   scroller-highlight-color: '#e28964'
 input-text:
-  font-family: 'Menlo'
-  font-size: 13.0
+  font-family: 'Ricty Dicord'
+  font-size: 18.0
   background-color: '#002b36' # base02
   color: '#93a1a1'            # base1
 member-list:
-  font-family: 'Menlo'
+  font-family: 'Ricty Discord'
   font-size: 13.0
   color: '#93a1a1' # base1
   background-color: '#002b36' # base02
@@ -40,7 +40,7 @@ member-list:
       top-color: '#268bd2'         # base00
       bottom-color: '#268bd2'      # base00
 server-tree:
-  font-family: 'Menlo'
+  font-family: 'Ricty Discord'
   font-size: 13.0
   background-color: '#002b36' # base02
   highlight:
